--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
-
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "lint": "next lint"
   },
   "dependencies": {
     "@iconify/icons-mdi": "^1.2.46",
